--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
     "preinstall": "npx only-allow pnpm"
   },
   "dependencies": {
-    "@vue/repl": "^3.0.0",
+    "@vue/repl": "^4.0.1",
     "@vue/theme": "^2.2.5",
     "dynamics.js": "^1.1.5",
     "gsap": "^3.9.0",
-    "vitepress": "1.0.0-rc.33",
-    "vue": "^3.4.0-rc.3"
+    "vitepress": "^1.1.0",
+    "vue": "^3.4.0"
   },
   "devDependencies": {
     "@types/markdown-it": "^12.2.3",
